--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -71,13 +71,13 @@ import { pgwWrap } from "../js/pgw.js";
       <a href="#" id="mobile-logout-link" class="mobile-logout-btn">登出</a>
     </div>
     <a
-      href="https://www.facebook.com/sharer/sharer.php?u=https://reading.udn.com/story/act/bd_2024storyawards?utm_source=line_fb&utm_medium=sharepost&utm_campaign=bd_2024storyawards"
+      href="https://www.facebook.com/sharer/sharer.php?u=https://event.udn.com/bd_500bowls_vote2025?utm_source=line_fb&utm_medium=sharepost&utm_campaign=bd_500bowls_vote2025"
       target="_blank"
       rel="noopener noreferrer"
       class="social-icon"><img src="/image/fb.png" alt="Facebook" /></a
     >
     <a
-      href="https://social-plugins.line.me/lineit/share?url=https://reading.udn.com/story/act/bd_2024storyawards?utm_source=line_fb&utm_medium=sharepost&utm_campaign=bd_2024storyawards"
+      href="https://social-plugins.line.me/lineit/share?url=https://event.udn.com/bd_500bowls_vote2025?utm_source=line_fb&utm_medium=sharepost&utm_campaign=bd_500bowls_vote2025"
       target="_blank"
       rel="noopener noreferrer"
       class="social-icon"><img src="/image/line.png" alt="line" /></a
