--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,33 +8,40 @@ import "../styles/global.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>第一屆琅琅原創大賞【網路人氣獎票選活動】｜聯合新聞網 × 琅琅悅讀</title>
+    <title>2025 小吃四大天王 - 全台網路人氣票選｜聯合新聞網 × 500 碗</title>
     <meta
       name="description"
-      content="人氣投票、誰是網友票選 TOP 1？為原創小說應援！會員投票就送 U 點，再抽登機行李箱、電子閱讀器、全自動義式咖啡機及誠品博客來購書禮券"
+      content="小吃四大天王誰能上榜？動動手指票投全台小吃，免費拿 iPhone 及 LINE Points 上萬點數等好康"
     />
     <meta
       name="keywords"
-      content="琅琅原創大賞、網路人氣獎、原創小說人氣票選、小說創作、保證出版機會"
+      content="第三屆500碗、全台小吃新指南、網友票選、網路投票、iPhone 16、SOTHING向物高速手持風扇、LINE Points、500盤、500甜"
     />
-    <meta
-      property="og:title"
-      content="第一屆琅琅原創大賞【網路人氣獎票選活動】｜聯合新聞網 × 琅琅悅讀"
-    />
+    <meta property="og:title" content="2025 小吃四大天王 - 全台網路人氣票選｜聯合新聞網 × 500 碗" />
     <meta
       property="og:description"
-      content="人氣投票、誰是網友票選 TOP 1？為原創小說應援！會員投票就送 U 點，再抽登機行李箱、電子閱讀器、全自動義式咖啡機及誠品博客來購書禮券"
+      content="小吃四大天王誰能上榜？動動手指票投全台小吃，免費拿 iPhone 及 LINE Points 上萬點數等好康"
     />
     <meta
       property="og:image"
-      content="https://reading.udn.com/story/act/bd_2024storyawards/og.png"
+      content="https://reading.udn.com/story/act/bd_500bowls_vote2025/og.png"
     />
+    <meta property="og:url" content="https://event.udn.com/bd_500bowls_vote2025" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- 添加 SweetAlert2 CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+
+    <!-- 添加 SweetAlert2 JS -->
+    <script is:inline src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"
+    ></script>
     <!-- Begin comScore Tag -->
     <script is:inline>
       var _comscore = _comscore || [];
@@ -49,6 +56,11 @@ import "../styles/global.css";
         el.parentNode.insertBefore(s, el);
       })();
     </script>
+    <noscript>
+      <img src="http://b.scorecardresearch.com/p?c1=2&c2=7390954&cv=2.0&cj=1" />
+    </noscript>
+    <!-- End comScore Tag -->
+    <!-- Begin Data Layer -->
     <script is:inline>
       function getCookie(name) {
         var value = "; " + document.cookie;
@@ -74,8 +86,8 @@ import "../styles/global.css";
         {
           user_id: user_id,
           google_id: google_id,
-          cat: ["event_read", "", "", "", ""],
-          content_tag: "投票",
+          cat: ["500times", "cms", "", "", ""],
+          content_tag: "",
           auth_type: auth_type,
           publication_date: "",
           ffid: JSON.parse(localStorage.getItem("UDN_FID"))?.FFID,
@@ -85,56 +97,51 @@ import "../styles/global.css";
     </script>
     <script is:inline src="https://p.udn.com.tw/upf/static/common/udn-fingerprint.umd.js?12"
     ></script>
+    <!-- End Data Layer -->
     <!-- Google Tag Manager -->
     <script is:inline>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
-        w[l].push({
-          "gtm.start": new Date().getTime(),
-          event: "gtm.js",
-        });
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P8C62DS");
+      })(window, document, "script", "dataLayer", "GTM-PX9HJGB");
     </script>
     <!-- End Google Tag Manager -->
-    <!-- End comScore Tag -->
   </head>
 
-  <body
-    ><!-- Google Tag Manager (noscript) -->
+  <body>
+    <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-P8C62DS"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PX9HJGB"
         height="0"
         width="0"
         style="display:none;visibility:hidden"></iframe></noscript
     >
     <!-- End Google Tag Manager (noscript) -->
-    <noscript>
-      <img src="http://b.scorecardresearch.com/p?c1=2&c2=7390954&cv=2.0&cj=1" />
-    </noscript>
-    <slot />
+    <img src="http://b.scorecardresearch.com/p?c1=2&c2=7390954&cv=2.0&cj=1" />
   </body>
-
-  <style lang="scss" is:global>
-    @import "../styles/sweetalert2.scss";
-    html,
-    body {
-      margin: 0;
-      max-width: 100%;
-      width: 1920px;
-      height: 100%;
-      font-family: "source-han-sans", sans-serif;
-      scroll-behavior: smooth;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      background: #ebe54a;
-    }
-  </style>
+  <slot />
 </html>
+
+<style lang="scss" is:global>
+  @import "../styles/sweetalert2.scss";
+  html,
+  body {
+    margin: 0;
+    max-width: 100%;
+    width: 1920px;
+    height: 100%;
+    font-family: "source-han-sans", sans-serif;
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: #ebe54a;
+  }
+</style>
